<resources>
    <string name="app_name">Fontnnes</string>
    <string name="hint_email">email@gmail.com</string>
    <string name="Logo">Fondness</string>
    <string name="password_login">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Forgot_password">Forgot your password?</string>
    <string name="Login">Login</string>
    <string name="Register_lint">Don`t have an account? Register now!</string>
    <string name="Registration">Registration</string>
    <string name="Back_Login">Have an account? Login!</string>
    <string name="You_name">You name</string>
    <string name="Message_weryfication">It was sent to your mail with a code to confirm registration</string>
    <string name="code">Code</string>
    <string name="confirm_code">Confirm</string>
    <string name="Block">Block</string>
    <string name="Message">Message</string>
    <string name="Reset_password">Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message_people">messagePeople</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_chat">chat</string>

</resources>