<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account"
    android:background="@drawable/rectangle_1">

    <Button
        android:id="@+id/Back_home"
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_back"
        android:onClick="Back_home"
        />

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logo"
        android:textColor="@color/NexTurn"
        android:fontFamily="@font/poiret_one"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/Image_profil"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_below="@+id/Logo"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/Liner_layout"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@+id/Image_profil"
        android:layout_centerHorizontal="true"
        android:padding="5dp">

        <Button
            android:id="@+id/Message"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="@drawable/textview_custom"
            android:text="@string/Block"
            android:textAllCaps="false"
            android:textColor="@color/Hint_standart_color"
            android:fontFamily="@font/raleway"
            android:textSize="12sp"
            android:elevation="1dp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/Block"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="@drawable/textview_custom"
            android:layout_marginStart="10dp"
            android:text="@string/Message"
            android:textAllCaps="false"
            android:textColor="@color/Hint_standart_color"
            android:fontFamily="@font/raleway"
            android:textSize="12sp"
            android:elevation="1dp"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <TextView
        android:id="@+id/Info"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@+id/Liner_layout"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textview_custom_account"
        android:elevation="1dp"
        tools:targetApi="lollipop"
        android:textSize="14sp"
        android:fontFamily="@font/raleway"
        android:padding="10dp"
        android:textColor="@color/Standart_text_color"
        />


</RelativeLayout>